Fix spacing in post page

--- a/styles/_public.scss
+++ b/styles/_public.scss
@@ -306,6 +306,7 @@ main#post-main {
 	max-width: 1024px;
 	margin: 3rem auto;
 	box-shadow: var(--shadow);
+	padding: 0;
 }
 
 #post-title {
