--- a/styles/public/_comentarios.scss
+++ b/styles/public/_comentarios.scss
@@ -6,7 +6,7 @@
 	padding: 0 3% 1rem;
 }
 
-#post-main > .form_comentario {
+.form_comentario {
 	padding: 0 3% 1rem;
 	max-width: 24rem;
 }
